--- a/UptickBidAPI/conf/application.conf
+++ b/UptickBidAPI/conf/application.conf
@@ -10,3 +10,8 @@ repository.dispatcher {
     fixed-pool-size = ${fixedConnectionPool}
   }
 }
+
+play.filters.hosts {
+     allowed = ["my-backend"]
+}
+
