--- a/UptickBidAPI/conf/secure.conf
+++ b/UptickBidAPI/conf/secure.conf
@@ -10,7 +10,7 @@ play {
     flash.secure = true
     flash.httpOnly = true
 
-    forwarded.trustedProxies = ["::1", "127.0.0.1"]
+    forwarded.trustedProxies = ["127.0.0.1"]
   }
 
   i18n {
