changes to allow for analytics scripts to run

--- a/UptickBidAPI/conf/secure.conf
+++ b/UptickBidAPI/conf/secure.conf
@@ -22,6 +22,9 @@ play {
     csrf {
       cookie.secure = true
     }
+    headers {
+    	contentSecurityPolicy =  "default-src 'self' www.googletagmanager.com www.google-analytics.com 'unsafe-inline'"
+    }
 
     hosts {
       allowed = ["localhost:9443", "localhost:9000"]
