--- a/UptickBidAPI/conf/application.conf
+++ b/UptickBidAPI/conf/application.conf
@@ -15,3 +15,6 @@ play.filters.hosts {
      allowed = ["my-backend","localhost"]
 }
 
+play.http.secret.key="changeme"
+play.http.secret.key=${?APPLICTION_SECRET}
+
