--- a/UptickBidAPI/conf/application.conf
+++ b/UptickBidAPI/conf/application.conf
@@ -16,5 +16,5 @@ play.filters.hosts {
 }
 
 play.http.secret.key="changeme"
-play.http.secret.key=${?APPLICTION_SECRET}
+play.http.secret.key=UpTickBid
 
